<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fr1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:parentActivityName=".ui.main.MainFragment"
    android:padding="@dimen/top16">

    <TextView
        android:id="@+id/val1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rub"
        android:textSize="@dimen/f16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/val1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="number"
        android:hint="@string/one" />

    <TextView
        android:id="@+id/val2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/values"
        android:textSize="@dimen/f16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text1" />
    <EditText
        android:id="@+id/edit_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/val2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="number"
        android:hint="@string/val1" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/exchange" />

</androidx.constraintlayout.widget.ConstraintLayout>

